# GoLive

./: .gitignore  README.md  deploy.sh  pyproject.toml  runme.py
autodeploy/: create.py  main.tf  opentofu.py
containerizer/: commands.default.py  defaults.py  main.py  types.py  utils.py
containerizer/docker_builder/: constants.py  generator.py  tests.py
containerizer/docker_builder/templates/: basic.template
containerizer/docker_builder/templates/python/: basic.template
frontend/: Dockerfile  app.py  success.html
frontend/static/: style.css
frontend/templates/: home.html  login.html  success.html
sample-project/: app.py  app2.py  client_secret.json
sample-project/static/: style.css
sample-project/templates/: home.html  index.html  login.html  success.html
sample_project/: Dockerfile  app.py  client_secrets.json  requirements.txt
sample_project/static/: style.css
sample_project/templates/: home.html  success.html
sample_site/: app.py
src/autodeploy/: .terraform.lock.hcl  create.py  main.tftemplate
src/containerizer/: constants.py  defaults.py  main.py  test.py  types.py  utils.py
src/containerizer/docker_builder/: generator.py  tests.py
src/containerizer/docker_builder/templates/: basic.template
